increased size of page header when featured image is present. changed top primary nav to semi-transparent.fixed front page widget layout issue.

--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -2,15 +2,11 @@
 // -------------------------
 .jumbotron {
   margin-bottom: 0;
-  background: #000 no-repeat center;
-  background-size: cover;
   .page-header {
     border-bottom: none;
     h1, p {
       background-color: #000;
       padding: 5px 10px;
-      // display: inline;
-      // .clearfix;
     }
     p {
       display: inline;
@@ -18,6 +14,12 @@
     .entry-meta {
       color: @gray-light;
     }
+  }
+  &.jumbo-image {
+    padding-top: 180px;
+    padding-bottom: 150px;
+    background: @jumbotron-bg no-repeat center center fixed;
+    background-size: cover;
   }
 }
 
