--- a/assets/less/layouts/_header.less
+++ b/assets/less/layouts/_header.less
@@ -1,7 +1,6 @@
 .banner {
-    background: linear-gradient(@navbar-default-bg, darken(@navbar-default-bg, 3%));
-    border-bottom: 1px solid lighten(@brand-primary, 40%);
-    box-shadow: 0 0 5px 2px #000;
+    background: rgba(0,0,0,0.6);
+    border-bottom: 1px solid @gray;
 }
 
 .navbar-brand {
